# kinetica-sqlalchemy

./: Dockerfile  MANIFEST  README.md  conftest.py  pyproject.toml  setup.py
dbfiles/: odbc.ini  odbcinst.ini
sa_gpudb/: __init__.py  base.py  information_schema.py  pyodbc.py
tests/: test_connection.py
